--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=pe1b738a2d30adade5627ff8e01f2dee6d1dc9fe74aa6c1f56c5a
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+# 本番環境
+#spring.datasource.url=jdbc:postgresql://c7gljno857ucsl.cluster-czrs8kj4isg7.us-east-1.rds.amazonaws.com:5432/ditjjutub4fcn
+
+
+#ローカル環境
+#spring.datasource.url=jdbc:postgresql://db:5432/ditjjutub4fcn
+
