--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,10 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+bootJar {
+    manifest {
+        attributes 'Main-Class': 'com.springboottest.test.TestApplication'
+    }
+}
